2016-02-17  Ben Elliston  <bje@gnu.org>

	* lib/remote.exp (local_exec): Call exp_continue until eof is
	matched.

2016-02-16  Ben Elliston  <bje@gnu.org>

	* runtest.exp: Use the traditional exit codes when runtest is
	interrupted. This makes it possible to tell if runtest ran to
	completion or not. Suggested by Michael Chastain.

2016-02-15  Ben Elliston  <bje@gnu.org>

	* TODO: Add ideas produced from Cauldron 2013.

2016-02-15  Ben Elliston  <bje@gnu.org>

	* TODO: Update.

2016-02-15  Ben Elliston  <bje@gnu.org>

	* lib/dg.exp (dg-test): Remove comment about proc unresolved not
	setting exit_status to 1 -- it does.

2016-02-15  Ben Elliston  <bje@gnu.org>

	* lib/framework.exp (cleanup): Remove do-nothing proc.
	(log_and_exit): Remove call to cleanup.
	* doc/ref.xml: Remove documentation for cleanup.
	* doc/dejagnu.texi: Regenerate.

2016-02-15  Ben Elliston  <bje@gnu.org>

	Reported by David Malcolm.
	* lib/dejagnu.exp (text): Allow angle brackets in test messages.

2016-02-15  Ben Elliston  <bje@gnu.org>

	* config.guess: Update to version 2016-02-11.
	* config.sub: Update to version 2016-01-01.

2016-02-14  Maxim Kuvyrkov  <maxim.kuvyrkov@linaro.org>

	* lib/remote.exp (remote_exec): Set global timeout for benefit of
	<remote>_exec.

2016-02-14  Ben Elliston  <bje@gnu.org>

	* lib/remote.exp (local_exec): Improve comments.

2016-02-14  Ben Elliston  <bje@gnu.org>

	* doc/runtest.1: Tweak.

2016-02-14  Steve Ellcey  <sellcey@mips.com>

	* baseboards/multi-sim.exp (dynamic_linker_flag): Check
	GCC_UNDER_TEST.
	* baseboards/multi-sim.exp (rpath_flags): Ditto.

2016-01-23  Simon Marchi  <simon.marchi@ericsson.com>

	* lib/remote.exp (standard_file): Reverse return logic for remote
	exists case.

2016-01-23  Simon Marchi  <simon.marchi@ericsson.com>

	* lib/remote.exp (standard_file); Add else clause.

2016-01-16  Ben Elliston  <bje@gnu.org>

	* runtest.exp (runtest): Improve comment about --status.

2016-01-12  Simon Marchi  <simon.marchi@ericsson.com>
